# backend-flask/openapi-3.0.yml
@@ -163,6 +163,22 @@ paths:
                 type: object
                 items:
                   $ref: '#/components/schemas/Activity'
+  /api/activities/healthcheck:
+    get:
+      description: 'Returns a feed activity to response from requests from users'
+      tags:
+        - activities
+      parameters: []
+      responses:
+        '200':
+          description: Returns an array of activities
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/Activity'
+                
 
 components:
   schemas:
